# yadi-lp-bot

./: .env.example  Dockerfile  README.md  pyproject.toml  ruff.toml
devops/: Dockerfile
src/bot/: main.py
src/bot/application/handlers/: admin.py  base.py  help.py  roles.py  set.py  settings.py  start.py  stats.py  time_picker.py  update_settings.py
src/bot/application/services/: formatter.py  long_poll.py  notification.py  scheduler.py  statistics.py  user.py
src/bot/application/widgets/: keyboards.py  time_picker.py
src/bot/common/: logs.py
src/bot/common/utils/: formatters.py  formatting.py  pagination.py  path_parser.py  permissions.py  sorting.py
src/bot/core/: config.py  di.py
src/bot/domain/entities/: constants.py  course.py  mappings.py  material.py  notification.py  states.py  statistics.py  user.py  yadisk.py
src/bot/domain/repositories/: notification.py  statistics.py  user.py
src/bot/domain/services/: long_poll.py  notification.py  scheduler.py  statistics.py  user.py
src/bot/infrastructure/repositories/: notification.py  statistics.py  user.py
