[project]
name = "yadi-lp-bot"
version = "0.1.0"
description = "Telegram bot for Yandex.Disk lecture notifications"
requires-python = ">=3.13"
dependencies = [
  "aiogram>=3.22.0",
  "redis>=6.4.0",
  "pydantic==2.11.10",
  "pydantic-settings>=2.11.0",
  "dishka>=1.7.2",
  "aiohttp>=3.11.0",
  "apscheduler>=3.11.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[dependency-groups]
dev = [
  "ruff>=0.14.1",
]


[project.scripts]
yadi-lp = "bot.main:run"
